<resources>
    <string name="app_name">Slug Bug</string>
    <string name="Rules">Rules</string>
    <string name="Tribute">Dedication</string>
    <string name="home">Home</string>
    <string name="Log_In_Or_Register">Log In/Register</string>
    <string name="exit">Exit</string>
    <string name="page2"><![CDATA[Next>]]></string>
    <string name="constraintLayout">layout</string>
    <string name="title_activity_after_logged_in">After_Logged_in</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="play_buggy">Play Buggy</string>
    <!-- Settings Activity Title -->
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>
    <string name="devices">Devices</string>
    <string name="invite_others">Invite Others</string>
    <string name="back_to_the_game">Back to the Game</string>
    <string name="high_score_s">High Score\'s</string>
    <string name="look_at_my_bugs">Look at my Bugs</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register_here">Register Here!</string>
    <string name="username_email">Username/email</string>
    <string name="regester_me">Regester Me!</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="register_now">Register Now!</string>
    <string name="sign_up">Sign Up!</string>
    <string name="register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="playing_slug_bug">Playing Slug Bug!</string>
    <string name="thats_enough_for_now">That\'s enough for now!</string>
    <string name="play_again">Play Again!</string>
    <string name="Lets_Go">Lets Go!</string>
    <string name="Done">Done</string>
    <string name="play_with_friends">Play With Friends</string>
    <string name="go_live">Go live!</string>
    <string name="friend" translatable="false">Friend e-mail or Phone Number.</string>
    <string name="send_invitation">Send Invitation!</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="button">Button</string>
    <string name="phone_number">Phone Number</string>
    <string name="friends_email">Friends Email</string>
    <string name="friends_phone_number">Friends Phone Number</string>
    <string name="save">Save</string>
    <string name="fetch">Fetch</string>
    <string name="delete">Delete</string>
    <string name="back">BACK</string>
    <string name="list">List</string>
    <string name="invite_to_play_a_game">Invite to Play a Game!</string>
    <string name="get_slugbug_at_google_play">Get Slugbug at Google play.</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="slug_bug_scores_db">Slug Bug Scores DB</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last Name</string>
    <string name="dialog_start_game">Start_Game</string>
    <string name="start">start</string>
    <string name="cancel">create</string>

</resources>